--- a/dev/html/culturetv/videoList.pug
+++ b/dev/html/culturetv/videoList.pug
@@ -38,6 +38,7 @@ block contents
                                     .visual-content-box
                                         .video
                                             a.link-content-list(href="#" title="")
+                                                img.link-img(src="../../images/link_img_sample.jpg", alt="")
                                                 i.ico-play(aria-hidden="true") 
                                     .visual-text-box
                                         ul.visual-category
