한눈에 보는 문화정보 완료

--- a/dev/css/oneEye.scss
+++ b/dev/css/oneEye.scss
@@ -3,6 +3,6 @@
 $global-font-size : 10px;
 
 
-@import '../css/common.scss';
+// @import '../css/common.scss';
 @import '../css/_ksc.scss';
 @import '../css/_kya.scss';
