--- a/dev/css/_kya.scss
+++ b/dev/css/_kya.scss
@@ -245,21 +245,37 @@
 
 .section-search {
 
+    .wrap-search {
+
+        &.open {
+            border-bottom: 0;
+            .area-option {
+                display: block;
+            }
+
+            .btn-open {
+                .ico-arrow {
+                    transform: rotate(180deg);
+                }
+            }
+
+            .area-search {
+                border-radius: 0 0 12px 12px;
+            }
+        }
+    }
+
     .area-option {
-        border-radius: 12px;
+        display: none;
         border: solid 1px #ddd;
+        border-bottom: 0;
+        border-radius: 12px 12px 0 0;
         overflow: hidden;
     }
     
     .search-category {
         display: flex;
         border-bottom: solid 1px #ddd;
-    }
-
-    .search-option {
-        .btn-reset {
-            font-size: 14px;
-        }
     }
     
     .search-head {
@@ -279,6 +295,7 @@
                 width: 20px;
                 height: 20px;
                 margin-right: 8px;
+                margin-top: 2px;
                 border: 1px solid #ddd;
                 background: #fff;
                 border-radius: 50%;
@@ -292,10 +309,11 @@
 
         .filter-main {
             display: flex;
+            align-items: center;
         }
 
         .txt {
-            display: inline-block;
+            display: block;
             font-size: 20px;
             font-weight: bold;
         }
@@ -305,35 +323,41 @@
         display: flex;
         flex-wrap: wrap;
         align-items: center;
-        padding: 0 24px;
+        padding: 8px 2px;
+        flex: 1;
+
+        .list {
+            display: flex;
+            align-items: center;
+            margin: 10px 22px;
+
+            &:last-child .sub-list {
+                margin-right: 0;
+            }
+        }
 
         .item {
-            
-
-            & + .item {
-                margin-left: 43px;
+            input[type="checkbox"]{
+                display: none;
+    
+                & + label .circle-item {
+                    background: gray;
+                }
+                
+                &:checked + label .circle-item:after {
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    left: 0;
+                    bottom: 0;
+                    content:'';
+                    display: block;
+                    background: #ff6742;
+                    opacity: 0.5;
+                }
             }
         }
-
-        input[type="checkbox"]{
-            display: none;
-
-            & + label .circle-item {
-                background: gray;
-            }
-            
-            &:checked + label .circle-item:after {
-                position: absolute;
-                top: 0;
-                right: 0;
-                left: 0;
-                bottom: 0;
-                content:'';
-                display: block;
-                background: #ff6742;
-                opacity: 0.5;
-            }
-        }
+        
 
         .filter-label {
             display: block;
@@ -352,9 +376,321 @@
                 font-weight: bold;
             }
         }
+
+        .sub-list {
+            display: flex;
+            flex-wrap: wrap;
+            // max-width: 248px;
+            max-width: 182px;
+            margin-left: 10px;
+        }
+
+        .sub-item {
+            margin-right: 16px;
+            padding: 4px 0;
+
+            input[type="checkbox"]{
+                display: none;
+        
+                & + label::before {
+                    display: block;
+                    content: '';
+                    width: 20px;
+                    height: 20px;
+                    margin-right: 8px;
+                    border: 1px solid #ddd;
+                    background: #fff;
+                    border-radius: 50%;
+                }
+        
+                &:checked + label::before {
+                    background: #ff6742;
+                    border: none;
+                }
+            }
+        }
+
+        .filter-sub {
+            display: inline-flex;
+
+            .txt {
+                font-size: 14px;
+                display: inline-block;
+                min-width: 39px;
+            }
+        }
         
     }
+
+    .item-option {
+        display: flex;
+        align-items: center;
+        margin-right: 24px;
+        padding: 8px 0;
+
+        .txt {
+           color: #FF6742;
+           font-size: 14px;
+           font-weight: bold;
+           margin-right: 4px;
+        }
+    }
+
+    .search-option {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        padding: 8px 24px;
+
+        .wrap-item {
+            display: flex;
+            flex-wrap: wrap;
+        }
+    }
     
+
+    .btn-reset {
+        display: flex;
+        align-items: center;
+        padding: 8px 0;
+        margin-right: 24px;
+
+        .ico {
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            background:url('/images/home/ico_reset.png') center no-repeat;
+            background-size: 12px 12px; 
+        }
+        .txt {
+            font-size: 14px;
+            color: #727272;
+        }
+    }
+    .btn-delete {
+        width: 20px;
+        height: 20px;
+        background:url('/images/home/ico_delete.png') center no-repeat;
+        background-size: 10px 10px; 
+    }
+
+    .area-search {
+        position: relative;
+        background: #f3ebe0;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        border-radius: 12px;
+        overflow: hidden;
+        padding: 20px;
+
+        .area-input {
+            max-width: 620px;
+            width: 100%;
+            margin: 12px 20px;
+            position: relative;
+
+            input {
+                width: 100%;
+                border: none;
+                background: #fff;
+                color: #222;
+                height: 52px;
+                border-radius: 26px;
+                font-size: 16px;
+                padding: 0 62px 0 24px;
+
+                &::placeholder {
+                    color: #222;
+                    opacity: 0.3;
+                }
+            }
+
+            .btn-search {
+                position: absolute;
+                right: 24px;
+                top: 50%;
+                transform: translateY(-50%);
+                width: 36px;
+                height: 36px;
+                background:url('/images/home/ico_search.png') center no-repeat;
+                background-size: 24px 24px; 
+            }
+        }
+
+        .area-button {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            right: 50px;
+
+            .btn-open {
+                display: inline-flex;
+                align-items: center;
+                height: 36px;
+                margin-right:20px;
+                padding: 8px 16px;
+                border-radius: 18px;
+                border: solid 1px #222;
+
+                .txt {
+                    font-size: 14px;
+                }
+
+                .ico-arrow {
+                    display: inline-block;
+                    width: 8px;
+                    height: 4.5px;
+                    margin-left: 8px;
+                    background:url('/images/home/ico_arrow_open.png') center/contain no-repeat;
+                }
+            }
+
+            .btn-confirm {
+                padding: 20px 0;
+                .txt {
+                    font-size: 12px;
+                    color: #222;
+                    border-bottom: 1px solid #222;
+                }   
+            }
+        }
+    }
+}
+
+.search-result {
+    padding-bottom: 120px;
+    margin-top: 52px;
+
+    .tab-result {
+        display: flex;
+        justify-content: space-between;
+        border-top: 2px solid #222;
+        background: #f5f5f5;
+    }
+
+    .tab-btn {
+        flex: 1;
+        display: block;
+        height: 60px;
+        border-bottom: 1px solid #ddd;
+        border-right: 1px solid #ddd;
+
+        &:first-child {
+            border-left: 1px solid #ddd;
+        }
+
+        .txt {
+            display: block;
+            font-size: 14px;
+        }
+        .num {
+            display: block;
+            font-size: 12px;
+            color: #999;
+            margin-top: 2px;
+        }
+
+        &.on {
+            background: #fff;
+            border-bottom: none;
+
+            .txt {
+                font-weight: bold;
+                color: #222;
+            }
+            .num {
+                font-weight: bold;
+                color: #FF6742;
+            }
+        }
+
+    }
+
+    .tab-util {
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-between;
+        padding-bottom: 10px;
+        margin-top: 17px;
+        border-bottom: 1px solid #ddd;
+        flex-wrap: wrap;
+
+        .txt-total {
+            font-size: 16px;
+            margin-right: 10px;
+            strong {
+                font-weight: bold;
+            }
+        }
+
+        .list-search {
+            display: flex;
+            margin-top: 15px;
+            flex-wrap: wrap;
+
+            select {
+                font-size: 13px;
+                color: #222;
+                width: 130px;
+                padding: 8px 10px 9px;
+                font-family: inherit;
+                background:url('/images/home/ico_arrow_select.png') center right 13px no-repeat; 
+                background-size: 9px 5px;
+                border: 1px solid #ddd; 
+                border-radius: 0px;
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
+                margin-right: 12px;
+                margin-bottom: 6px;
+            }
+        }
+
+        .search-input {
+            position: relative;
+            width: 220px;
+            margin-bottom: 6px;
+
+            input {
+                width: 100%;
+                font-size: 13px;
+                color: #999;
+                border: 1px solid #ddd; 
+                padding: 8px 38px 9px 10px;
+
+                &::placeholder {
+                    color: #222;
+                    opacity: 0.3;
+                }
+            }
+
+            .btn-search {
+                position: absolute;
+                width: 38px;
+                height: 100%;
+                right: 0;
+                top: 0;
+                background:url('/images/home/ico_search.png') center no-repeat;
+                background-size: 20px 20px; 
+            }
+        }
+    }
+
+    .tab-result-list {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 32px;
+        margin-left: -40px;
+
+        .list {
+            width: calc(100% / 6 - 40px);
+            margin-left: 40px;
+            margin-bottom: 52px;
+            
+        }
+    }
 }
 
 
@@ -384,8 +720,33 @@
 // }
 
 
+// 반응형 대응
+@media (max-width:1280px){
+    .search-result .tab-result-list {
+        margin-left: -20px;
+    }
+    .search-result .tab-result-list .list {
+        width: calc(100% / 3 - 20px);
+        margin-left: 20px;
+        margin-bottom: 40px;
+    }
+}
+
+@media (max-width:1200px){
+    .section-search .area-search .area-button {
+        position: static;
+        transform: none;
+        top: auto;
+    }
+}
+
 
 @media (max-width:1024px){
+
+    .section-inner {
+        padding: 0 23px;
+    }
+
     .title-area .title-h2 {
         // font-size: 24;
     }
@@ -462,6 +823,69 @@
             }
         }
     }
+
+
+
+    .search-result .tab-result-list .list {
+        width: calc(100% / 2 - 20px);
+    }
+    .search-result .tab-result {
+        flex-wrap: wrap;
+    }
+    .search-result .tab-btn {
+        flex: unset;
+        width: 50%;
+
+        &:nth-child(2n-1) {
+            border-left: 1px solid #ddd;
+        }
+
+        &.on {
+            border-bottom: 1px solid #ddd;
+        }
+        
+    }
+
+    .section-search .search-category {
+        flex-wrap: wrap;
+    }
+    .section-search .search-head {
+        width: 100%;
+        min-height: auto;
+        padding: 20px;
+    }
+    .section-search .search-list {
+        flex: none;
+        width: 100%;
+    }
+
+    .section-search .search-head .txt {
+        font-size: 18px;
+    }
+
+    .section-search .search-list .list {
+        margin: 10px 16px;
+    }
+
+    .section-search .btn-reset {
+        padding: 4px 0;
+    }
+    .section-search .item-option {
+        padding: 4px 0;
+    }
+
+    .section-search .area-search {
+        padding: 20px 5px;
+    }
+
+    .section-search .area-search .area-input {
+        padding-top: 0;
+    }
+
+    .section-search .area-search .area-input input {
+        font-size: 14px;
+    }
+    
 
     
 }
